[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cluster_manager"
description = "ClusterManager is a Python-based command-line interface (CLI) tool that helps you quickly set up and manage a cluster on a single host, with a PostgreSQL database provisioned for the cluster using Docker"
dynamic = ["version"]
requires-python = ">=3.11"
authors = [
    { name = "Matimu Chauke", email = "matimu@chauke.org" },
]
dependencies = []

[project.optional-dependencies]
full = []

[tool.hatch.version]
path = "cluster_manager/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/cluster_manager",
]
